Update pmd-dist/src/main/resources/scripts/pmd.bat
Add all needed `--add-opens` for javaFX

Co-authored-by: Andreas Dangel <andreas.dangel@adangel.org>